--- a/OnlineApp/appsettings.json
+++ b/OnlineApp/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnectionString": "Server=DESKTOP-9AU6OLA\\SQLEXPRESS;Database=AppDB;Trusted_Connection=True;TrustServerCertificate=True;"
+    "DefaultConnection": "Server=DESKTOP-9AU6OLA\\SQLEXPRESS;Database=AppDB;Trusted_Connection=True;TrustServerCertificate=True;"
   }
 }
  
