--- a/OnlineApp.DataAccess/OnlineApp.DataAccess.csproj
+++ b/OnlineApp.DataAccess/OnlineApp.DataAccess.csproj
@@ -1,9 +1,9 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
-    <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
@@ -17,7 +17,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\OnlineApp.DataAccess\OnlineApp.DataAccess.csproj" />
     <ProjectReference Include="..\OnlineApp.Models\OnlineApp.Models.csproj" />
     <ProjectReference Include="..\OnlineApp.Utility\OnlineApp.Utility.csproj" />
   </ItemGroup>
