--- a/OnlineApp.DataAccess/OnlineApp.DataAccess.csproj
+++ b/OnlineApp.DataAccess/OnlineApp.DataAccess.csproj
@@ -21,4 +21,8 @@
     <ProjectReference Include="..\OnlineApp.Utility\OnlineApp.Utility.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Migrations\" />
+  </ItemGroup>
+
 </Project>
