--- a/OnlineApp/OnlineApp.csproj
+++ b/OnlineApp/OnlineApp.csproj
@@ -22,4 +22,8 @@
     <ProjectReference Include="..\OnlineApp.Utility\OnlineApp.Utility.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\images\product\" />
+  </ItemGroup>
+
 </Project>
