Stripe Payment Changes

--- a/OnlineApp.Utility/OnlineApp.Utility.csproj
+++ b/OnlineApp.Utility/OnlineApp.Utility.csproj
@@ -10,6 +10,7 @@
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.6" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="8.0.7" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="8.0.2" />
+    <PackageReference Include="Stripe.net" Version="45.3.0" />
   </ItemGroup>
 
 </Project>
